--- a/styles.css
+++ b/styles.css
@@ -29,14 +29,20 @@ h1 {
     color: lime;
 }
 
+.logo_space {
+    width: 100%;
+    height: 50em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .center_background {
-    width: 70%;
-    height: 50%;
+    width: 40em;
+    height: 15em;
     border-radius: 100px;
     background-color: rgb(16, 16, 16);
-    position: absolute;
-    left:15%;
-    bottom:25%;display: flex;
+    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -45,4 +51,18 @@ h1 {
     color:greenyellow;
     font-size:400%;
     letter-spacing: 5px;
+}
+
+.game_links {
+    width: 100%;
+    height: 12em;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.game_links a {
+    text-decoration: none;
+    color: greenyellow;
+    font-size: 200%;
 }
